SBRB: fight - Extract methods buildSteps and getFightStepsReversed